--- a/Statistics.ipynb
+++ b/Statistics.ipynb
@@ -6,7 +6,7 @@
       "name": "Statistics.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOWlK0fnPAPPAux348ybPiX",
+      "authorship_tag": "ABX9TyO/056XHNFl8M93qZrYIdtO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,12 +42,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wHFphgFK-qJP",
-        "outputId": "e54da9cf-6c58-4733-bd55-3845edc72224",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "wHFphgFK-qJP",
+        "outputId": "e54da9cf-6c58-4733-bd55-3845edc72224"
       },
       "source": [
         "import pandas as pd\r\n",
@@ -120,12 +120,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "trug_CudAGCj",
-        "outputId": "12e33f97-acf5-45ab-cf19-37b7be93230b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 283
-        }
+          "height": 284
+        },
+        "id": "trug_CudAGCj",
+        "outputId": "12e33f97-acf5-45ab-cf19-37b7be93230b"
       },
       "source": [
         "import matplotlib.pyplot as plt\r\n",
@@ -163,12 +163,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RR9-4EdBEIq0",
-        "outputId": "69a87c0c-7f96-45fa-d088-cd9cad34b209",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "RR9-4EdBEIq0",
+        "outputId": "69a87c0c-7f96-45fa-d088-cd9cad34b209"
       },
       "source": [
         "df['relFreq']=df[\"Sold\"]/(df[\"Sold\"].sum())\r\n",
@@ -243,12 +243,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JshXPfd5WQtX",
-        "outputId": "148bf918-e459-481c-c3bb-836b90453289",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 357
-        }
+          "height": 360
+        },
+        "id": "JshXPfd5WQtX",
+        "outputId": "148bf918-e459-481c-c3bb-836b90453289"
       },
       "source": [
         "plt.pie(df[\"relFreq\"], labels=df[\"City\"])"
@@ -300,12 +300,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uelY2Xh7YMuX",
-        "outputId": "de1a9b9b-fb7e-46d3-bad4-505ff94928d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
-        }
+          "height": 340
+        },
+        "id": "uelY2Xh7YMuX",
+        "outputId": "de1a9b9b-fb7e-46d3-bad4-505ff94928d5"
       },
       "source": [
         "df[\"Cumulative\"]=df[\"relFreq\"].cumsum()\r\n",
@@ -338,6 +338,278 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vHgy-4OA_BB4"
+      },
+      "source": [
+        "## Distribution"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V2AosfSXCrmA"
+      },
+      "source": [
+        "## Distribution\r\n",
+        "\r\n",
+        "Dataset\r\n",
+        "--- \r\n",
+        "8\r\n",
+        "30\r\n",
+        "30\r\n",
+        "50\r\n",
+        "86\r\n",
+        "94\r\n",
+        "102\r\n",
+        "110\r\n",
+        "169\r\n",
+        "170\r\n",
+        "176\r\n",
+        "236\r\n",
+        "240\r\n",
+        "241\r\n",
+        "242\r\n",
+        "255\r\n",
+        "262\r\n",
+        "276\r\n",
+        "279\r\n",
+        "282\r\n",
+        "\r\n",
+        "Frequency distribution table\r\n",
+        "Desired intervals | 6\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t3muHiHr_Bxi"
+      },
+      "source": [
+        "![image](https://user-images.githubusercontent.com/2136211/110235074-1a4a7600-7f54-11eb-8ad7-9e4e47ec88e8.png)\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UNtjWFPx_Zhh"
+      },
+      "source": [
+        "distlist = [8,30,30,50,86,94,102,110,169,170,176,236,240,241,242,255,262,276,279,282]"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mlBOUY9JAPIy"
+      },
+      "source": [
+        "df = pd.DataFrame(distlist)"
+      ],
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kHDk18e0CaWi",
+        "outputId": "ab1b7cce-902c-4361-aac7-d1fb992c96d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        }
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "import math as math\r\n",
+        "interval_width = math.ceil((df.stack().max() - df.stack().min())/6)\r\n",
+        "print(interval_width)\r\n",
+        "bins = np.arange(df.stack().min(),df.stack().max()+interval_width,interval_width)\r\n",
+        "df=df.apply(lambda x: pd.cut(x, bins=bins).value_counts())\r\n",
+        "df\r\n",
+        "## idea from https://stackoverflow.com/a/45806493"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "46\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>(238, 284]</th>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(146, 192]</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(8, 54]</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(100, 146]</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(54, 100]</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(192, 238]</th>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            0\n",
+              "(238, 284]  8\n",
+              "(146, 192]  3\n",
+              "(8, 54]     3\n",
+              "(100, 146]  2\n",
+              "(54, 100]   2\n",
+              "(192, 238]  1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9G6eeltRFLKg",
+        "outputId": "5d435106-4706-468f-9b5b-d5cd112b1541",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 237
+        }
+      },
+      "source": [
+        "df['relFreq']=round(df[0]/(df[0].sum()),2)\r\n",
+        "df"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>relFreq</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>(238, 284]</th>\n",
+              "      <td>8</td>\n",
+              "      <td>0.42</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(146, 192]</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(8, 54]</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(100, 146]</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(54, 100]</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(192, 238]</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0.05</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            0  relFreq\n",
+              "(238, 284]  8     0.42\n",
+              "(146, 192]  3     0.16\n",
+              "(8, 54]     3     0.16\n",
+              "(100, 146]  2     0.11\n",
+              "(54, 100]   2     0.11\n",
+              "(192, 238]  1     0.05"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
         }
       ]
     }
