--- a/Statistics.ipynb
+++ b/Statistics.ipynb
@@ -6,7 +6,7 @@
       "name": "Statistics.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/4FDyquRyta8moMSBk6bK",
+      "authorship_tag": "ABX9TyOrxOL499hIk1RvTeeYk/6M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,21 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "w0SXx4BDMIlt"
+      },
+      "source": [
+        "#imports\r\n",
+        "import matplotlib.pyplot as plt\r\n",
+        "import pandas as pd\r\n",
+        "import numpy as np\r\n",
+        "import math as math"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
@@ -50,12 +65,12 @@
         "outputId": "b3dea39f-cbdc-44b8-9c66-d4b5a5e800da"
       },
       "source": [
-        "import pandas as pd\r\n",
+        "\r\n",
         "data = [['NY',12327],['LA',17129],['SF',19923]]\r\n",
         "df = pd.DataFrame(data,columns=['City','Sold'])\r\n",
         "df"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,10 +143,10 @@
         "outputId": "ba3c0b1d-a132-42b8-b7be-bf1d821e3523"
       },
       "source": [
-        "import matplotlib.pyplot as plt\r\n",
+        "\r\n",
         "plt.bar(df[\"City\"],df[\"Sold\"])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -174,7 +189,7 @@
         "df['relFreq']=df[\"Sold\"]/(df[\"Sold\"].sum())\r\n",
         "df"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +268,7 @@
       "source": [
         "plt.pie(df[\"relFreq\"], labels=df[\"City\"])"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,7 +309,7 @@
       "source": [
         "df = df.sort_values(\"Sold\", ascending=False,axis=0)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +329,7 @@
         "plt.plot(df[\"City\"],df[\"Cumulative\"],'r')\r\n",
         "plt.show()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +421,7 @@
       "source": [
         "distlist = [13,68,165,193,216,228,361,470,500,529,544,602,647,692,696,699,809,892,899,936]"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +432,7 @@
       "source": [
         "df = pd.DataFrame(distlist)"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -431,8 +446,7 @@
         "outputId": "204eb740-4839-4ae8-c529-961ff84af66f"
       },
       "source": [
-        "import numpy as np\r\n",
-        "import math as math\r\n",
+        "\r\n",
         "interval_width = math.ceil((df.stack().max() - df.stack().min())/10)\r\n",
         "print(interval_width)\r\n",
         "bins = np.arange(df.stack().min(),df.stack().max()+interval_width,interval_width)\r\n",
@@ -440,7 +454,7 @@
         "df\r\n",
         "## idea from https://stackoverflow.com/a/45806493"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,7 +568,7 @@
         "df['relFreq']=round(df[0]/(df[0].sum()),2)\r\n",
         "df"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -673,7 +687,7 @@
         "df[\"index_str\"]=df[\"index\"].apply(lambda x:str(x))\r\n",
         "plt.bar(df[\"index_str\"],df['relFreq'])"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,17 +742,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "QaOpLJLWNneA",
-        "outputId": "22125d99-2b7b-476a-917b-565090d65da6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "22125d99-2b7b-476a-917b-565090d65da6"
       },
       "source": [
         "df = pd.read_csv(\"https://raw.githubusercontent.com/kurtzace/complete-data-science-bootcamp-excercises/main/statisticsfiles/scatter.csv\")\r\n",
         "df.head()"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -828,16 +842,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "kCsml6-zP2p1",
-        "outputId": "3aa961d2-9af8-48a2-d224-00aa2f08debd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        }
+        },
+        "outputId": "3aa961d2-9af8-48a2-d224-00aa2f08debd"
       },
       "source": [
         "plt.scatter(df['Apple (AAPL)'],df['Alphabet (GOOGL)'])"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -870,16 +884,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "4UeQEPyCQSE-",
-        "outputId": "1aedb288-9d99-4ac1-d843-8f82d981fae4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        }
+        },
+        "outputId": "1aedb288-9d99-4ac1-d843-8f82d981fae4"
       },
       "source": [
         "plt.scatter(df['Apple (AAPL)'],df['Bank of America (BAC)'])"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -933,17 +947,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "TahpXaqcQ7nV",
-        "outputId": "07ed3f45-eff1-4400-fc83-36c0c10282ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "07ed3f45-eff1-4400-fc83-36c0c10282ed"
       },
       "source": [
         "df = pd.read_csv('https://raw.githubusercontent.com/kurtzace/complete-data-science-bootcamp-excercises/main/statisticsfiles/employedcross.csv')\r\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1027,18 +1041,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "-D8FacLqtZXV",
-        "outputId": "5eb4b7ef-1ddb-4761-9622-4f5bb62edfd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
-        }
+        },
+        "outputId": "5eb4b7ef-1ddb-4761-9622-4f5bb62edfd2"
       },
       "source": [
         "df['right_total']=df['employed']+df['unemployed']\r\n",
         "df.loc[5] = ['Total', df['employed'].sum(), df['unemployed'].sum(), df['right_total'].sum()]\r\n",
         "df"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1136,11 +1150,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "8nK94m5huLcX",
-        "outputId": "c3656553-557e-46dd-aa32-8682a354d59a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 266
-        }
+        },
+        "outputId": "c3656553-557e-46dd-aa32-8682a354d59a"
       },
       "source": [
         "ax = plt.subplot(111)\r\n",
@@ -1149,7 +1163,7 @@
         "ax.legend(df.columns[1:])\r\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1163,6 +1177,94 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UZ_tEFcmJhmV"
+      },
+      "source": [
+        "## Mean Median Mode\r\n",
+        "\r\n",
+        "\r\n",
+        "Background | You   have a sample of 11 people and their personal annual income.\r\n",
+        "-- | --\r\n",
+        "Task 1 | Calculate the mean,   median and mode\r\n",
+        "Task 2 | Try to interpret on the   numbers you got\r\n",
+        "\r\n",
+        "\r\n",
+        "Annual income \r\n",
+        "- \\$62,000.00\r\n",
+        "- \\$64,000.00\r\n",
+        "- \\$49,000.00\r\n",
+        "- \\$324,000.00\r\n",
+        "- \\$1,264,000.00\r\n",
+        "- \\$54,330.00\r\n",
+        "- \\$64,000.00\r\n",
+        "- \\$51,000.00\r\n",
+        "- \\$55,000.00\r\n",
+        "- \\$48,000.00\r\n",
+        "- \\$53,000.00\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MQaP7zl9LtHs",
+        "outputId": "0f194447-b9c0-47fd-ae96-d72368a96f6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "## With library\r\n",
+        "sal = [62000.00,64000.00,49000.00,324000.00,1264000.00,54330.00,64000.00,51000.00,55000.00,48000.00,53000.00]\r\n",
+        "salNum = np.array(sal)\r\n",
+        "print(f'len {len(salNum)}')\r\n",
+        "print(f'mean {salNum.mean()}')\r\n",
+        "print(f'median {np.median(salNum)}')\r\n",
+        "from scipy import stats\r\n",
+        "stats.mode(salNum)\r\n",
+        "\r\n",
+        "## nolibrary\r\n",
+        "salNum = np.array(sal)\r\n",
+        "print(f'mean no lib {np.sum(salNum)/len(salNum)}')\r\n",
+        "\r\n",
+        "medianLow =0\r\n",
+        "medianHigh =0\r\n",
+        "if len(salNum)%2!=0:\r\n",
+        "  medianLow = math.floor(len(salNum) / 2)\r\n",
+        "  medianHigh =  math.ceil((len(salNum) / 2)+1)\r\n",
+        "sorted = np.sort(salNum)\r\n",
+        "print(sorted)\r\n",
+        "print(medianLow)\r\n",
+        "print(medianHigh)\r\n",
+        "print(len(salNum)/2)\r\n",
+        "mid= sorted[(int)(len(salNum)/2)] if len(salNum)%2==0 else (sorted[medianLow] + sorted[medianHigh])/2\r\n",
+        "print(f'median no lib {mid}')\r\n",
+        "mid= salNum[(int)(len(salNum)/2)] if len(salNum)%2==0 else (salNum[medianLow] + salNum[medianHigh])/2\r\n",
+        "print(f'median no lib no sort {mid}')"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "len 11\n",
+            "mean 189848.18181818182\n",
+            "median 55000.0\n",
+            "mean no lib 189848.18181818182\n",
+            "[  48000.   49000.   51000.   53000.   54330.   55000.   62000.   64000.\n",
+            "   64000.  324000. 1264000.]\n",
+            "5\n",
+            "7\n",
+            "5.5\n",
+            "median no lib 59500.0\n",
+            "median no lib no sort 52665.0\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
